<!-- item_order.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp">
        <TextView
            android:id="@+id/orderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/orderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="id"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/viewDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewDetail"
            android:textStyle="italic"
            android:textColor="#DD0606"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <Button
            android:id="@+id/btn_accpept"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:background="@drawable/button_accept"
            android:text="@string/hoanTat" />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/button_cancel"
            android:text="@string/huyDon" />
    </LinearLayout>
</LinearLayout>
