<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RevenueActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/losed_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_revenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/revenue"
        android:textColor="#BE1515"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/backButton" />

    <LinearLayout
        android:id="@+id/ll_revenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:background="#f4f4f4"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/tv_revenue"
        app:layout_constraintTop_toBottomOf="@+id/tv_revenue">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/poppins_semibold"
            android:text="STT"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/dish_name"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/quantity"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/total_price"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRevenue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@+id/ll_revenue"
        app:layout_constraintTop_toBottomOf="@+id/ll_revenue" />


</androidx.constraintlayout.widget.ConstraintLayout>