<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAdmin">

    <ImageView
        android:id="@+id/img_logo_login"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo_shop"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/tv_name_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/name_shop"
        android:textColor="#BE1515"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo_login">

    </TextView>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login_admin"
        android:textColor="#A61128"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_shop">

    </TextView>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:inputType="textEmailAddress"
        android:hint="Email"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:background="@drawable/custom_edt_login"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:elevation="1dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_login"
        app:layout_constraintStart_toStartOf="@+id/tv_login"
        app:layout_constraintEnd_toEndOf="@+id/tv_login"/>

    <TextView
        android:id="@+id/tv_username_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_error"
        android:layout_marginStart="30dp"
        android:textColor="#E60B0B"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        android:background="@drawable/custom_edt_login"
        app:layout_constraintStart_toStartOf="@+id/edt_email"
        app:layout_constraintEnd_toEndOf="@+id/edt_email">
    </TextView>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:hint="Mật khẩu"
        android:elevation="1dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_username_error"
        android:background="@drawable/custom_edt_login"
        app:layout_constraintStart_toStartOf="@+id/edt_email"
        app:layout_constraintEnd_toEndOf="@+id/edt_email" />



    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:elevation="5dp"
        android:text="Đăng nhập"
        android:textSize="18sp"
        android:padding="10dp"
        android:background="@drawable/custom_btn_login"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintEnd_toEndOf="@+id/edt_password">
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>