<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            app:cardCornerRadius="15dp"
            android:elevation="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/foodImageView"
                    android:layout_width="62dp"
                    android:layout_height="62dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.483"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/priceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/price_10"
                    android:textColor="#C92626"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_string_price"
                    app:layout_constraintStart_toEndOf="@+id/tv_string_price" />


                <ImageView
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/delete" />

                <TextView
                    android:id="@+id/ingredientTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/cha_lua"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView10"
                    app:layout_constraintStart_toEndOf="@+id/textView10"
                    app:layout_constraintTop_toTopOf="@+id/textView10" />

                <TextView
                    android:id="@+id/foodNameTextView"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_semibold"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="16dp"
                    android:text="TextView"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/foodImageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/eat_more1"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/priceTextView"
                    app:layout_constraintStart_toEndOf="@+id/foodImageView"
                    app:layout_constraintTop_toBottomOf="@+id/foodNameTextView" />

                <TextView
                    android:id="@+id/tv_string_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/price_1"
                    android:textColor="#C92626"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/foodImageView" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/edit_menu"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/deleteButton"
                    app:layout_constraintEnd_toStartOf="@+id/deleteButton"
                    app:layout_constraintTop_toTopOf="@+id/deleteButton"
                    app:srcCompat="@drawable/edit_icon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>