<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FDFDFD"
        tools:context=".AdminProfileActivity">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/losed_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:textColor="#000000"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.325"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="@+id/backButton" />

        <LinearLayout
            android:id="@+id/linearLayoutAdminCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/custom_edt_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_show">

            <TextView
                android:id="@+id/tv_adminCode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="2.2"
                android:paddingStart="15dp"
                android:gravity="center"
                android:text="Admin Code"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_adminCode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:textColor="@color/black"
                android:backgroundTint="@android:color/transparent"
                android:inputType="textPersonName"
                android:text="AD01"
                android:textSize="18dp"
                android:enabled="false"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/custom_edt_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutAdminCode">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="2.2"
                android:paddingStart="15dp"
                android:gravity="center"
                android:text="@string/first_last_name"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:backgroundTint="@android:color/transparent"
                android:inputType="textPersonName"
                android:text="Nguyễn Văn A"
                android:textSize="18dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:padding="12dp"
                android:gravity="center"
                android:src="@drawable/edit_icon" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayoutAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/custom_edt_login"
            android:outlineSpotShadowColor="#BCB4B4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutName">

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="2.2"
                android:paddingStart="12dp"
                android:gravity="center"
                android:text="@string/address"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:inputType="textMultiLine"
                android:padding="18dp"
                android:text="Man Thiện, Thủ Đức, Thành phố Hồ Chí Minh"
                android:textSize="18dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:padding="12dp"
                android:gravity="center"
                android:src="@drawable/edit_icon" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/custom_edt_login"
            android:outlineSpotShadowColor="#BCB4B4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutAddress">

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="3.8"
                android:gravity="center"
                android:paddingStart="15dp"
                android:text="Email"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:paddingLeft="15dp"
                android:enabled="false"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:text="admin@gmail.com"
                android:textSize="18dp"
                android:scrollHorizontally="true"
                android:scrollbars="horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/custom_edt_login"
            android:outlineSpotShadowColor="#BCB4B4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutEmail">

            <TextView
                android:id="@+id/tv_sdt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="2.2"
                android:paddingStart="15dp"
                android:gravity="center"
                android:text="SĐT"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_sdt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:backgroundTint="@android:color/transparent"
                android:paddingLeft="15dp"
                android:inputType="phone"
                android:text="0966823991"
                android:textSize="18dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:padding="12dp"
                android:gravity="center"
                android:src="@drawable/edit_icon" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edt_login"
            android:layout_marginLeft="12dp"
            android:outlineSpotShadowColor="#BCB4B4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutSDT">
        </LinearLayout>

        <Button
            android:id="@+id/btn_saveProfile"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/save_information"
            android:textSize="18dp"
            android:padding="20dp"
            android:background="@drawable/custom_edt_login"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="#FE0000"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutPassword"
            app:layout_constraintStart_toStartOf="@+id/linearLayoutPassword"
            app:layout_constraintEnd_toEndOf="@+id/linearLayoutPassword"></Button>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>